
2010-08-12  Paulo Pizarro <paulo.pizarro@gmail.com>
	* renamed luasofia_utils.* to luasofia_log.*

2010-08-05  Paulo Pizarro <paulo.pizarro@gmail.com>
	* implemented function nua_callstate_name on the module 'nua'

2010-08-04  Paulo Pizarro <paulo.pizarro@gmail.com>
	* added more soa tags: SOATAG_DELAYED_OFFER_ENABLE (configure --enable-sofia-devel)

2010-08-03  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.7devel
	* Fixed nua_callstate_received constant name

2010-08-03  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.6
	* implemented function status_phrase on the module 'sip'

2010-07-22  Tiago Katcipis <tiagokatcipis@gmail.com>
	* added luarocks support

2010-07-15  Paulo Pizarro <paulo.pizarro@gmail.com>
	* refactory on load module glib, requiring 'sofia.glib' doesn't load the 'sofia.su' module anymore

2010-07-14  Tiago Katcipis <tiagokatcipis@gmail.com>
	* fixing bug when loading sofia.glib after loading sofia.su

2010-07-13  Guilherme Silveira <xguiga@gmail.com>
	* implemented function get_proxy_subscription_state on the module 'sip'
	* implemented function get_proxy_msg_payload on the module 'sip'

2010-07-10  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed sdp module to use negative numbers on the access to the stack 
	* changed glib module to use negative numbers on the access to the stack 
	* changed sdp module to use negative numbers on the access to the stack 
	* changed utils to use negative numbers on the access to the stack 

2010-07-09  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed LUA_CMODULE default value on the configure.ac

2010-07-08  Paulo Pizarro <paulo.pizarro@gmail.com>
	* changed to use negative numbers on the access to the stack

2010-07-02  Paulo Pizarro <paulo.pizarro@gmail.com>
	* configure.ac: Version 0.1.6devel
	* implemented threading method on the root class
	* fixed bind method of the NuaHandle class
	  to accept nil or none values (unbind)
